// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ItemModifier /> should render with props 1`] = `
<ItemModifier
  count={32}
  id={1}
  layout="block"
  list={
    Array [
      Object {
        "id": "0",
      },
      Object {
        "id": "1",
      },
      Object {
        "id": "2",
      },
      Object {
        "id": "3",
      },
      Object {
        "id": "4",
      },
      Object {
        "id": "5",
      },
      Object {
        "id": "6",
      },
    ]
  }
  title="Foo"
  withTitle={true}
>
  <Box
    marginBottom={4}
    marginTop={4}
  >
    <div
      className="M-t__4 M-b__4"
    >
      <Box
        alignItems="baseline"
        display="flex"
        justifyContent="between"
        marginBottom={2}
      >
        <div
          className="display-flex align-items-baseline justify-content-between M-b__2"
        >
          <span
            className="title"
          >
            Foo
          </span>
          <Memo(Text)
            color="gray38"
            lineHeight={16}
            size={12}
          >
            <span
              className="size-12 line-height-16 color__gray38"
            >
              Всего 
              32
            </span>
          </Memo(Text)>
        </div>
      </Box>
      <ModifierSelect
        className="block"
      >
        <div
          className="wrap block"
          onKeyDown={[Function]}
          role="button"
          tabIndex={0}
        >
          <div
            className="name"
          />
          <div
            className="arrow"
          >
            <RightSVG
              className="arrow-icon"
              role="presentation"
            >
              <svg
                className="arrow-icon"
                height={16}
                role="presentation"
                viewBox="0 0 16 16"
                width={16}
              >
                <path
                  clipRule="evenodd"
                  d="M6.341 12.753a1 1 0 01-.094-1.412L9.171 8 6.247 4.659a1 1 0 011.506-1.317l3.5 4a1 1 0 010 1.317l-3.5 4a1 1 0 01-1.412.094z"
                  fillRule="evenodd"
                />
              </svg>
            </RightSVG>
          </div>
        </div>
      </ModifierSelect>
    </div>
  </Box>
</ItemModifier>
`;

exports[`<ItemModifier /> should render with props 2`] = `
<ItemModifier
  count={32}
  id={1}
  layout="inline"
  list={
    Array [
      Object {
        "id": "0",
      },
      Object {
        "id": "1",
      },
      Object {
        "id": "2",
      },
      Object {
        "id": "3",
      },
      Object {
        "id": "4",
      },
      Object {
        "id": "5",
      },
      Object {
        "id": "6",
      },
    ]
  }
  title="Foo"
  withTitle={true}
>
  <Box
    marginBottom={4}
    marginTop={4}
  >
    <div
      className="M-t__4 M-b__4"
    >
      <Box
        alignItems="baseline"
        display="flex"
        justifyContent="start"
        marginBottom={2}
      >
        <div
          className="display-flex align-items-baseline justify-content-start M-b__2"
        >
          <span
            className="title"
          >
            Foo
             (всего 
            32
            )
          </span>
        </div>
      </Box>
      <ModifierSelect
        className="wide"
      >
        <div
          className="wrap wide"
          onKeyDown={[Function]}
          role="button"
          tabIndex={0}
        >
          <div
            className="name"
          />
          <div
            className="arrow"
          >
            <RightSVG
              className="arrow-icon"
              role="presentation"
            >
              <svg
                className="arrow-icon"
                height={16}
                role="presentation"
                viewBox="0 0 16 16"
                width={16}
              >
                <path
                  clipRule="evenodd"
                  d="M6.341 12.753a1 1 0 01-.094-1.412L9.171 8 6.247 4.659a1 1 0 011.506-1.317l3.5 4a1 1 0 010 1.317l-3.5 4a1 1 0 01-1.412.094z"
                  fillRule="evenodd"
                />
              </svg>
            </RightSVG>
          </div>
        </div>
      </ModifierSelect>
    </div>
  </Box>
</ItemModifier>
`;

exports[`<ItemModifier /> should render without props 1`] = `<ItemModifier />`;
